# telepathy-haze

./: .gitignore  AUTHORS  Makefile.am  NEWS  _boring  autogen.sh  configure.ac
data/: Makefile.am  haze.manager  haze.service.in  im.telepathy1.ConnectionManager.haze.service.in  org.freedesktop.Telepathy.ConnectionManager.haze.service.in
extensions/: Makefile.am  all.xml  extensions.c  extensions.h
m4/: Makefile.am
misc/: aim.profile  msn.profile  xmpp.profile
src/: Makefile.am  NOTES  connection-aliasing.c  connection-aliasing.h  connection-avatars.c  connection-avatars.h  connection-capabilities.c  connection-capabilities.h  connection-mail.c  connection-mail.h  connection-manager.c  connection-manager.h  connection-presence.c  connection-presence.h  connection.c  connection.h  contact-list-channel.c  contact-list-channel.h  contact-list.c  contact-list.h  debug.c  debug.h  defines.h  haze-connection-manager.c  haze.c  im-channel-factory.c  im-channel-factory.h  im-channel.c  im-channel.h  main.c  media-backend.c  media-backend.h  media-channel.c  media-channel.h  media-manager.c  media-manager.h  media-stream.c  media-stream.h  notify.c  notify.h  (+10 more)
tests/: Makefile.am  exec-with-log.sh  haze.service.in  tmp-session-bus.conf.in
tests/twisted/: Makefile.am  avatar-requirements.py  constants.py  gabbletest.py  hazetest.py  run-test.sh.in  servicetest.py  simple-caps.py
tests/twisted/cm/: protocols.py
tests/twisted/connect/: fail.py  success.py  twice-to-same-account.py
tests/twisted/presence/: presence.py
tests/twisted/roster/: groups.py  initial-roster.py  publish.py  removed-from-rp-subscribe.py  subscribe.py
tests/twisted/sasl/: close.py  saslutil.py  telepathy-password.py
tests/twisted/text/: destroy.py  ensure.py  initiate-requestotron.py  initiate.py  respawn.py  test-text-delayed.py  test-text-no-body.py  test-text.py
tests/twisted/tools/: Makefile.am  exec-with-log.sh  haze.service.in
tools/: Makefile.am  c-constants-gen.py  glib-ginterface-gen.py  glib-gtypes-generator.py  glib-interfaces-gen.py  glib-signals-marshal-gen.py  lcov.am  libglibcodegen.py  libtpcodegen.py  make-release-mail.py  telepathy.am
